--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
 		"prod": "set NODE_ENV=PRODUCTION  && node src/index.js"
 	},
 	"dependencies": {
-		"tailwindcss": "^4.0.9",
-		"@tailwindcss/cli": "^4.0.9"
+		"@tailwindcss/cli": "^4.0.9",
+		"express": "^4.21.2",
+		"i18n": "^0.15.1",
+		"tailwindcss": "^4.0.9"
 	},
 	"repository": {
 		"type": "git",
