--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
 		"prod": "set NODE_ENV=PRODUCTION  && node src/index.js"
 	},
 	"dependencies": {
-		"tailwindcss": "^4.0.9",
-		"@tailwindcss/cli": "^4.0.9"
+		"@tailwindcss/cli": "^4.0.9",
+		"selenium-webdriver": "^4.29.0",
+		"tailwindcss": "^4.0.9"
 	},
 	"repository": {
 		"type": "git",
@@ -21,5 +22,8 @@
 	"bugs": {
 		"url": "https://github.com/CPNV-RIA1/FE_MakeList/issues"
 	},
-	"homepage": "https://github.com/CPNV-RIA1/FE_MakeList#readme"
+	"homepage": "https://github.com/CPNV-RIA1/FE_MakeList#readme",
+	"devDependencies": {
+		"jest": "^29.7.0"
+	}
 }
