--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
 	},
 	"dependencies": {
 		"@tailwindcss/cli": "^4.0.9",
-		"selenium-webdriver": "^4.29.0",
 		"express": "^4.21.2",
-		"i18n": "^0.15.1",
+		"i18next": "^24.2.3",
+		"i18next-browser-languagedetector": "^8.0.4",
+		"loc-i18next": "^0.1.6",
+		"selenium-webdriver": "^4.29.0",
 		"tailwindcss": "^4.0.9"
 	},
 	"repository": {
