--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 		"i18next-browser-languagedetector": "^8.0.4",
 		"loc-i18next": "^0.1.6",
 		"selenium-webdriver": "^4.29.0",
-		"tailwindcss": "^4.0.9"
+		"tailwindcss": "^4.0.9",
+		"toastify-js": "^1.12.0"
 	},
 	"repository": {
 		"type": "git",
