--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
 	"main": "src/index.js",
 	"scripts": {
 		"test": "jest",
-		"dev": "set NODE_ENV=DEVELOPMENT && node src/index.js",
-		"prod": "set NODE_ENV=PRODUCTION  && node src/index.js"
+		"dev": "set NODE_ENV=DEVELOPMENT && php -S 127.0.0.1:8081 -t public",
+		"prod": "set NODE_ENV=PRODUCTION  && nphp -S 127.0.0.1:8081 -t public",
+		"tailwind": "npx @tailwindcss/cli -i ./public/assets/styles/main.css -o ./public/dist/styles.css --watch"
 	},
 	"dependencies": {
 		"@tailwindcss/cli": "^4.0.9",
-		"express": "^4.21.2",
 		"i18next": "^24.2.3",
 		"i18next-browser-languagedetector": "^8.0.4",
 		"loc-i18next": "^0.1.6",
-		"selenium-webdriver": "^4.29.0",
+		"selenium-webdriverS": "^4.29.0",
 		"tailwindcss": "^4.0.9",
 		"toastify-js": "^1.12.0"
 	},
