--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"i18next": "^24.2.3",
 		"i18next-browser-languagedetector": "^8.0.4",
 		"loc-i18next": "^0.1.6",
-		"selenium-webdriverS": "^4.29.0",
+		"selenium-webdriver": "^4.29.0",
 		"tailwindcss": "^4.0.9",
 		"toastify-js": "^1.12.0"
 	},
