--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 	},
 	"homepage": "https://github.com/CPNV-RIA1/FE_MakeList#readme",
 	"devDependencies": {
+		"@tailwindcss/forms": "^0.5.10",
 		"jest": "^29.7.0",
 		"start-server-and-test": "^2.0.11"
 	}
