fix(ci): change executed test command to run server in parallel

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,4 +46,4 @@ jobs:
           install-chromedriver: true
       
       - name: Run tests
-        run: pnpm run test
+        run: pnpm run dev-test
